# Coding_Challenge_Websites

./: .pre-commit-config.yaml  Day005.cpp  Day01.cpp  Day02.cpp  Day04.cpp  README.md  go.mod  limit_req.py  pyproject.toml
01-arrays_and_strings/: 01-is_unique.py  02-check_permutation.py
03-stacks_and_queues/: 01-three_in_one.py  06-animal_shelter.py  LinkedList.py
04-trees_and_graphs/: 02-minimal_tree.py  09-bst_sequence.py  12-paths_with_sums.py  Graph.py
30_Days_of_code/: Day00_Hello_world.cpp  Day03_Conditional_statements.cpp  Day05_Loops.cpp
C++/30_Days_of_code/: Day01_Data_types.cpp  Day02_Operators.cpp  Day04_Class_vs_instance.cpp  Day05_Loops.cpp  Day06_Lets_review.cpp  Day07_Arrays.cpp  Day08_Dictionaries_and_maps.cpp
Interview_Preparation_Kit/: 01-sock_merchant.py
Interview_Preparation_Kit/01-Warm-up_Challenges/: 01-sock_merchant.py  02-counting_valleys.py
Interview_Preparation_Kit/02-Arrays/: 03-new_years_chaos.py
Interview_Preparation_Kit/13-Recursion_and_Backtracking/: 01-fibonacci_Numbers.py
Questions/: 0118-Passcals_triangle.go  0118-Passcals_triangle_test.go  0200-Number_of_islands.go  0200-Number_of_islands_test.go  118-Passcals_triangle.go  118-Passcals_triangle_test.go
questions/: lc_0127_word_ladder.py
tests/: test_lc_0127_word_ladder.py
utilities/: Elapsed_time.go
